src/native/string.h

void movsb_rep(void);
void movsw_rep(void);
void movsd_rep(void);
void cmpsb_rep(int32_t);
void cmpsw_rep(int32_t);
void cmpsd_rep(int32_t);
void stosb_rep(void);
void stosw_rep(void);
void stosd_rep(void);
void lodsb_rep(void);
void lodsw_rep(void);
void lodsd_rep(void);
void scasb_rep(int32_t);
void scasw_rep(int32_t);
void scasd_rep(int32_t);
void insb_rep(void);
void insw_rep(void);
void insd_rep(void);
void outsb_rep(void);
void outsw_rep(void);
void outsd_rep(void);